# src/app/api/openapi-spec.json/openapi.json
@@ -8,34 +8,277 @@
   "servers": [{ "url": "https://ytcatalog.707x.in/api" }],
   "components": {},
   "paths": {
-    "/logout": {
-      "get": {
-        "summary": "Logout user",
-        "tags": ["Users"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": ""
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/users": {
+    "/feedback": {
       "post": {
-        "summary": "Register an user",
-        "tags": ["Users"],
+        "tags": ["Feedback"],
+        "summary": "Create an issue with Feedback on GitHub",
         "description": "",
         "parameters": [],
         "responses": {
           "201": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Unable to create an issue on GitHub"
+          }
+        }
+      }
+    },
+    "/archives": {
+      "get": {
+        "tags": ["Archives"],
+        "summary": "Fetch all archives of an user",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Archives"],
+        "summary": "Create an archive",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/archives/valid": {
+      "get": {
+        "summary": "Fetch all valid archives",
+        "tags": ["Archives"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/archives/{archiveId}": {
+      "get": {
+        "summary": "Fetch all details of an archive",
+        "tags": ["Archives"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/archives/{archiveId}/add-video": {
+      "patch": {
+        "summary": "Add a video to an archive",
+        "tags": ["Archives"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/archives/{archiveId}/delete": {
+      "delete": {
+        "summary": "Remove an archive",
+        "tags": ["Archives"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/archives/{archiveId}/remove-video": {
+      "patch": {
+        "summary": "Remove a video from an archive",
+        "tags": ["Archives"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/archives/{archiveId}/update": {
+      "patch": {
+        "summary": "Update an archive's title & description",
+        "tags": ["Archives"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs": {
+      "get": {
+        "tags": ["Catalogs"],
+        "summary": "Fetch all catalogs of a user",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Catalogs data fetched successfully"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Catalogs"],
+        "summary": "Create a catalog",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/valid": {
+      "get": {
+        "summary": "Fetch all valid catalogs",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/{catalogId}": {
+      "get": {
+        "summary": "Fetch all details of a catalog",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/{catalogId}/channel": {
+      "patch": {
+        "summary": "Add channels to a catalog",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Remove a channel from the catalog",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/{catalogId}/delete": {
+      "delete": {
+        "summary": "Delete a catalog",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [
+          {
+            "required": true,
+            "name": "catalogId",
+            "in": "path",
+            "description": "Catalog ID of the catalog",
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/{catalogId}/next-update": {
+      "get": {
+        "summary": "Fetch the time for catalog's next update",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/{catalogId}/playlist": {
+      "patch": {
+        "summary": "Add playlists to a catalog",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Remove a playlist from the catalog",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/{catalogId}/update": {
+      "patch": {
+        "tags": ["Catalogs"],
+        "summary": "Update a catalog's title & description",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/catalogs/{catalogId}/videos": {
+      "get": {
+        "summary": "Fetch all videos of the catalog",
+        "tags": ["Catalogs"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
             "description": "OK"
           }
         }
@@ -93,249 +336,34 @@
         }
       }
     },
-    "/feedback": {
+    "/logout": {
+      "get": {
+        "summary": "Logout user",
+        "tags": ["Users"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": ""
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users": {
       "post": {
-        "tags": ["Feedback"],
-        "summary": "Create an issue with Feedback on GitHub",
+        "summary": "Register an user",
+        "tags": ["Users"],
         "description": "",
         "parameters": [],
         "responses": {
           "201": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Unable to create an issue on GitHub"
-          }
-        }
-      }
-    },
-    "/catalogs": {
-      "get": {
-        "tags": ["Catalogs"],
-        "summary": "Fetch all catalogs of a user",
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Catalogs data fetched successfully"
-          }
-        }
-      },
-      "post": {
-        "tags": ["Catalogs"],
-        "summary": "Create a catalog",
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "201": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/catalogs/valid": {
-      "get": {
-        "summary": "Fetch all valid catalogs",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/catalogs/{catalogId}/delete": {
-      "delete": {
-        "summary": "Delete a catalog",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [
-          {
-            "required": true,
-            "name": "catalogId",
-            "in": "path",
-            "description": "Catalog ID of the catalog",
-            "schema": { "type": "string" }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/catalogs/{catalogId}/next-update": {
-      "get": {
-        "summary": "Fetch the time for catalog's next update ",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/catalogs/{catalogId}/playlist": {
-      "patch": {
-        "summary": "Add playlists to a catalog",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "summary": "Remove a playlist from the catalog",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/catalogs/{catalogId}/update": {
-      "patch": {
-        "summary": "Add channels to a catalog",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "201": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "summary": "Remove a channel from the catalog",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "201": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/catalogs/{catalogId}/videos": {
-      "get": {
-        "summary": "Fetch all videos of the catalog",
-        "tags": ["Catalogs"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/archives/{archiveId}": {
-      "get": {
-        "summary": "Fetch all details of an archive",
-        "tags": ["Archives"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "patch": {
-        "summary": "Update an archive title and description",
-        "tags": ["Archives"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/archives/valid": {
-      "get": {
-        "summary": "Fetch all valid archives",
-        "tags": ["Archives"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/archives/{archiveId}/delete": {
-      "delete": {
-        "summary": "Remove an archive",
-        "tags": ["Archives"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/archives/{archiveId}/remove-video": {
-      "patch": {
-        "summary": "Remove a video from an archive",
-        "tags": ["Archives"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/archives/{archiveId}/update": {
-      "patch": {
-        "summary": "Add a video to an archive",
-        "tags": ["Archives"],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/archives": {
-      "get": {
-        "tags": ["Archives"],
-        "summary": "Fetch all archives of an user",
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "tags": ["Archives"],
-        "summary": "Create an archive",
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
             "description": "OK"
           }
         }
